@@ -181,6 +181,7 @@
     * 0252 FIX: ESX vSphere configuration: Fixed non-working configuration parameters...
     * 0456 FIX: Column was too short...
     * 0256 FIX: wato snapshots: snapshot restore no longer fails with older python versions...
+    * 0433 FIX: Creating WATO lock during automations (like e.g. master to slave syncs)...
 
     Notifications:
     * 0362 sms: now searching PATH for sendsms and smssend commands...
